--- a/shelter/pages/main/css/fonts/style.css
+++ b/shelter/pages/main/css/fonts/style.css
@@ -1,15 +1,21 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?b6atkm');
-  src:  url('../fonts/icomoon.eot?b6atkm#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?b6atkm') format('truetype'),
-    url('../fonts/icomoon.woff?b6atkm') format('woff'),
-    url('../fonts/icomoon.svg?b6atkm#icomoon') format('svg');
+ src: url('../shelter/pages/main/css/fonts/icomoon.eot?b6atkm');
+ src: url('../shelter/pages/main/css/fonts/icomoon.eot?b6atkm#iefix') format('embedded-opentype'),
+ url('../shelter/pages/main/css/fonts/icomoon.ttf?b6atkm') format('truetype'),
+ url('../shelter/pages/main/css/fonts/icomoon.woff?b6atkm') format('woff'),
+ url('../shelter/pages/main/css/fonts/icomoon.svg?b6atkm#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
-
+/* 
+ src:  url('../css/fonts/icomoon.eot?b6atkm');
+  src:  url('../css/fonts/icomoon.eot?b6atkm#iefix') format('embedded-opentype'),
+    url('../css/fonts/icomoon.ttf?b6atkm') format('truetype'),
+    url('../css/fonts/icomoon.woff?b6atkm') format('woff'),
+    url('../css/fonts/icomoon.svg?b6atkm#icomoon') format('svg');
+*/
 [class^="icon-"]::before, [class*=" icon-"]::before {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
