--- a/shelter/pages/main/css/main.css
+++ b/shelter/pages/main/css/main.css
@@ -180,7 +180,7 @@ h1 {
 }
 .header__down-left {
   padding-right: 42px;
-  margin-bottom: 110px;
+  margin-bottom: 90px;
 }
 .header__title {
   line-height: 130%;
@@ -209,7 +209,7 @@ h1 {
   transition: 0.5s ease-out;
 }
 .header__button {
-  padding-top: 30px;
+  padding-top: 20px;
 }
 .header__down-right {
   min-width: 728px;
@@ -490,4 +490,23 @@ padding: 30px 0px 0px 0px;
 .slider__button-wrapper {
   padding: 45px 0px;
 
+}
+/* media 768px */
+@media(max-width:768px ){
+  .addition__wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .about__wrapper {
+    flex-direction: column-reverse;
+  }
+  .header__down {
+    flex-direction: column;
+  }
+  .about__left {
+    margin-right: 0;
+    margin-top: 80px;
+  }
 }
