--- a/shelter/pages/main/css/main.css
+++ b/shelter/pages/main/css/main.css
@@ -121,7 +121,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 60px;
+  padding-top: 30px;
 }
 .header__logo {
 
@@ -317,7 +317,7 @@ margin-bottom: 20px;
   background-color: #F1CDB3;
   border-radius: 9px;
   padding: 10px 15px;
-  max-width: 351px;
+
 }
 .credit-card {
   letter-spacing: 0.06em;
@@ -394,8 +394,9 @@ margin-left: 20px;
 color: #F1CDB3;
 }
 .footer__right {
-  min-width: 300px;
+  display: flex;
   padding-top: 40px;
+  align-items: flex-end;
 }
 /* slider */ 
 .our-friends {
@@ -493,20 +494,294 @@ padding: 30px 0px 0px 0px;
 }
 /* media 768px */
 @media(max-width:768px ){
+  .header__down-left {
+    max-width: 460px;
+    padding-right: 0px;
+  }
+ .header__button {
+   text-align: center;
+ }
+ .header__down-right {
+   min-width: 100%;
+ }
+ .slider__item:last-child {
+   display: none;
+ }
+ .our-friends .container {
+   padding: 0px 30px;
+ }
+ .help__grid-items {
+  column-gap: 60px;
+ }
+ .help__grid-item {
+   min-width: 170px;
+ }
+ .header__up {
+   padding-top: 30px;
+ }
+ .our-friends__slider {
+   padding: 0px 20px;
+ }
+ .dog-picture {
+  max-width: 593px;
+    float: right;
+}
+}
+@media(max-width:1000px) {
   .addition__wrapper {
     display: flex;
     justify-content: center;
     flex-direction: column-reverse;
     align-items: center;
   }
+  .addition__left {
+    min-width: auto;
+    margin-top: 60px;
+  }
   .about__wrapper {
     flex-direction: column-reverse;
   }
+  .about__left {
+    margin-right: 0px;
+    margin-top: 80px;
+  }
+}
+@media(max-width:900px) {
+  .footer__item:last-child {
+    width: 100%;
+    justify-content: center;
+    padding-top: 65px;
+   }
+   .footer__wrapper {
+     flex-wrap: wrap;
+     padding-top: 30px;
+     justify-content: space-around;
+   }
+   .footer__left, .footer__center {
+    justify-content: space-between;
+    min-height: 234px;
+   }
+}
+@media(max-width:652px) {
+  .footer__left {
+    padding-bottom: 40px;
+  }
+}
+@media(max-width:1100px) {
   .header__down {
     flex-direction: column;
   }
-  .about__left {
+}
+/* burger */
+
+.burger {
+  display: none;
+  position: absolute;
+  right: 10px;
+  top: 60px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+.burger-line {
+  width: 30px;
+  position: absolute;
+  height: 2px;
+  background: #F1CDB3;
+  display: block;
+  transition: .3s;
+  z-index: 10;
+}
+.burger-line::before {
+  content: "";
+  top: -15px;
+  transition: top 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  width: 30px;
+  position: absolute;
+  height: 2px;
+  background: #F1CDB3;
+  display: block;
+  transition: .3s;
+   z-index: 10;
+}
+.burger-line::after {
+  content: "";
+  bottom: -15px;
+  transition: bottom 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+width: 30px;
+position: absolute;
+height: 2px;
+background: #F1CDB3;
+display: block;
+transition: .3s;
+z-index: 10;
+}
+.active-burger {
+ transform: rotate(90deg);
+}
+.hidden {
+  display: none;
+}
+
+@media (max-width:767px ){
+  .dog-picture {
+    max-width: 100%;
+  }
+  .burger {
+    display: block;
+  }
+  .nav-bar__item {
+    font-size: 32px;
+    line-height: 160%;
+
+  }
+  .nav-bar__items {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    right: 12%;
+    top: 30%;
+  }
+  .li__item {
+    margin-right:0 ;
+    margin-bottom: 40px;
+  }
+  .li__item:first-child {
+    margin-bottom: 43px;
+  }
+}
+.visible {
+  display: flex;
+}
+.header__black-bg {
+  background: black;
+    height: 100%;
+    width: 320px;
+    right: 0;
+    position: fixed;
+    z-index: 100;
+    transition: 1s ease-in-out;
+
+}
+.header__logo-copy {
+  opacity: 0;
+}
+.wrapper-grey {
+  background: rgba(41, 41, 41, 0.6);
+  width: 100%;
+  left: 0;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  transition: 1s ease;
+}
+@media(max-width:450px) {
+  .nav-bar__items {
+    right: 5%;
+  }
+  .footer__left-title {
+    text-align: center;
+    font-size: 25px;
+    line-height: 32.5px;
+  }
+  .footer__left {
+    align-items: center;
+  }
+  .footer__center {
+    align-items: center;
+  }
+  .footer__location{
+    letter-spacing: 0;
+  }
+  .credit-card {
+    letter-spacing: 0;
+  }
+  .help__text {
+    font-size: 15px;
+    line-height: 110%;
+  }
+  .help__grid-items {
+    row-gap: 30px;
+    column-gap: 30px;
+  }
+  .help__grid-item {
+    min-width: 130px;
+  }
+ 
+}
+@media(max-width:320px) {
+  .container {
+    padding: 0px 25px;
+  }
+  .header__title {
+    line-height: 33px;
+    font-size: 25px;
+    text-align: center;
+  }
+  .header__content {
+    text-align: center;
+    font-size: 15px;
+    line-height: 24px;
+  }
+  .about__title {
+    text-align: center;
+    font-size: 25px;
+  }
+  .nav-bar__items {
+    left: 5%;
+  }
+  .our-friends__title {
+    line-height: 32.5px;
+    font-size: 25px;
+  }
+  .help__title {
+    line-height: 32.5px;
+    font-size: 25px;
+  }
+  .credit-card {
+    line-height: 16.5px;
+    font-size: 15px;
+  }
+  .arrow-right {
+    position: relative;
+  }
+  .arrow-left {
+    position: relative;
+  }
+  .our-friends__slider {
+    flex-direction: column-reverse;
+  }
+  .arrow__wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 80%;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  .addition__left {
+    min-width: 100%;
     margin-right: 0;
-    margin-top: 80px;
+  }
+  .help__title-container {
+    padding: 0px 15px;
+  }
+  .help__grid-items {
+    justify-content: normal;
+  }
+  .addition__title {
+    font-size: 25px;
+    line-height: 32.5px;
+    text-align: center;
+  }
+  .addition__bank-name {
+    text-align: center;
+    font-size: 15px ;
+    line-height: 24px;
+  }
+}
+@media(max-width:750px) {
+  .slider__item:nth-last-child(-n+2) {
+    display: none;
   }
 }
