--- a/shelter/pages/pets/css/pets.css
+++ b/shelter/pages/pets/css/pets.css
@@ -203,3 +203,60 @@ padding: 14px 13px 15px 12px;
 .pets__our-friends {
     padding-top: 150px;
 }
+
+@media(max-width:1268px) {
+  .pets__gallery {
+    justify-content: center;
+    grid-template-columns: repeat(3, 270px);
+  }
+}
+@media(max-width:900px) {
+  .footer__item:last-child {
+    width: 100%;
+    justify-content: center;
+   }
+   .footer__wrapper {
+     flex-wrap: wrap;
+     padding-top: 30px;
+   }
+   .pets__gallery {
+     justify-content: center;
+     grid-template-columns: repeat(2, 270px);
+   }
+   .pets__item:nth-last-child(-n+2){
+     display: none;
+   }
+}
+@media(max-width:768px ) {
+  .header__up {
+    padding: 0;
+    padding-top: 30px;
+  }
+  .our-friends__title {
+    padding: 80px 0px 30px 0px;
+  }
+}
+@media(max-width:450px) {
+  .pets__gallery {
+    grid-template-columns: repeat(1, 270px);
+  }
+  .pets__item:nth-last-child(-n+5){
+    display: none;
+  }
+  .our-friends__title {
+    line-height: 32.5px;
+    font-size: 25px;
+  }
+  .our-friends__title {
+    padding: 40px 0px 40px 0px;
+  }
+  .button {
+    margin-right: 5px;
+  }
+}
+@media(max-width:321px) {
+  .header__black-bg {
+    width: 100%;
+  }
+  
+}
