--- a/shelter/pages/main/css/main.css
+++ b/shelter/pages/main/css/main.css
@@ -429,6 +429,9 @@ border-radius: 100px;
 /* slider */
 
 .our-friends__slider {
+ 
+}
+.slider__Wrapper {
   display: flex;
   align-items: center;
   position: relative;
@@ -442,10 +445,12 @@ border-radius: 100px;
   border: 2px solid #F1CDB3;
   padding: 23px 19px;
   cursor: pointer;
+  top: 50%;
 }
 .arrow-left {
   position: absolute;
   left: 0;
+  top: 50%;
   border-radius: 100px;
   border: 2px solid #F1CDB3;
   padding: 23px 19px;
@@ -504,9 +509,7 @@ padding: 30px 0px 0px 0px;
  .header__down-right {
    min-width: 100%;
  }
- .slider__item:last-child {
-   display: none;
- }
+
  .our-friends .container {
    padding: 0px 30px;
  }
@@ -519,9 +522,7 @@ padding: 30px 0px 0px 0px;
  .header__up {
    padding-top: 30px;
  }
- .our-friends__slider {
-   padding: 0px 20px;
- }
+
  .dog-picture {
   max-width: 593px;
     float: right;
@@ -570,6 +571,9 @@ padding: 30px 0px 0px 0px;
 @media(max-width:1100px) {
   .header__down {
     flex-direction: column;
+  }
+  .slider__item:last-child {
+    display: none;
   }
 }
 /* burger */
@@ -676,9 +680,23 @@ z-index: 10;
   top: 0;
   transition: 1s ease;
 }
+
 @media(max-width:450px) {
   .nav-bar__items {
     right: 5%;
+  }
+  .arrow__wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: 20px;
+  }
+  .arrow-right {
+    position: relative;
+  }
+  .arrow-left {
+    position: relative;
   }
   .footer__left-title {
     text-align: center;
@@ -743,22 +761,13 @@ z-index: 10;
     line-height: 16.5px;
     font-size: 15px;
   }
-  .arrow-right {
-    position: relative;
-  }
-  .arrow-left {
-    position: relative;
-  }
+
   .our-friends__slider {
-    flex-direction: column-reverse;
+    flex-direction: column;
+    position: relative;
   }
-  .arrow__wrapper {
-    display: flex;
-    flex-direction: row-reverse;
-    width: 80%;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
+ 
+ 
   .addition__left {
     min-width: 100%;
     margin-right: 0;
@@ -784,4 +793,12 @@ z-index: 10;
   .slider__item:nth-last-child(-n+2) {
     display: none;
   }
+}
+.slider__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.our-friends__slider {
+  position: relative;
 }
